syntax = "proto3";

package runm;

import "filter.proto";

// Indicates the scope of a type of object. The object type's scope indicates
// the level at which an object's name is guaranteed to be unique. Objects that
// have an object type with a PROJECT object type scope must be created with a
// specific project identifier. Objects with a PARTITION object type scope must
// be created with a partition UUID. Objects with a GLOBAL object type scope
// have names that are unique for the deployment of runmachine.
enum ObjectTypeScope {
    GLOBAL = 0;
    PARTITION = 1;
    PROJECT = 2;
}

// An object type is a simple classification for various types of things known
// to the runm system
message ObjectType {
    string code = 1;
    string description = 2;
    // Indicates the scope that names of objects of this type must guarantee
    // uniqueness for
    ObjectTypeScope scope = 3;
}

// Used in matching object type records
message ObjectTypeFilter {
    // A search term on the object type's string code
    CodeFilter code_filter = 1;
}
